# clemcore

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_hf.txt  requirements_vllm.txt  setup.py  setup_vllm.sh
.github/workflows/: test-installation.yml
backends/: anthropic_api.py  huggingface_local_api.py  huggingface_multimodal_api.py  llamacpp_api.py  model_registry.json  model_registry_eos_check.py  multimodal_utils.py  openai_api.py  openai_compatible_api.py  vllm_api.py
clemcore/: README.md  __init__.py  clemeval.py  cli.py
clemcore/backends/: __init__.py  alephalpha_api.py  anthropic_api.py  cohere_api.py  google_api.py  huggingface_local_api.py  huggingface_multimodal_api.py  initial_hf_check.py  llamacpp_api.py  mistral_api.py  model_registry.json  model_registry.py  model_registry_eos_check.py  multimodal_utils.py  openai_api.py  openai_compatible_api.py  utils.py  vllm_api.py
clemcore/clemgame/: .gitignore  __init__.py  benchmark.py  instances.py  master.py  metrics.py  player.py  recorder.py  registry.py  resources.py
clemcore/clemgame/transcripts/: builder.py  constants.py  patterns.py
clemcore/playpen/: __init__.py  base.py  buffers.py  callbacks.py
clemcore/playpen/envs/: __init__.py  branching_env.py  game_env.py
clemcore/utils/: logging.yaml  string_utils.py  transcript_utils.py
clemgame/: clemgame.py
docs/: howto_add_games.md
evaluation/: evalutils.py
games/matchit_1q/in/: test.json
games/matchit_5q/in/: test.json
games/matchit_ascii/in/: test.json
games/matchit_ascii_1q/: master.py
games/matchit_ascii_1q/in/: test.json
games/matchit_ascii_5q/in/: test.json
games/matchit_ascii_info/in/: test.json
games/matchit_info/in/: test.json
games/mm_mapworld/in/: test.json
games/mm_mapworld_graphs/in/: test.json
games/mm_mapworld_qa/in/: test.json
games/mm_mapworld_specificroom/in/: test.json
games/multimodal_referencegame/in/: test.json
games/referencegame/in/: test.json
games/textmapworld/in/: test.json
games/textmapworld_description/in/: test.json
games/textmapworld_graphreasoning/in/: test.json
games/textmapworld_questions/in/: test.json
games/textmapworld_specificroom/in/: test.json
tests/: test_backend.py  test_huggingface_local_api.py  test_model_spec.py  test_multimodal_instances.py
