[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clemcore"
version = "0.1.1"
description = "The cLLM (chat-optimized Large Language Model, 'clem') framework tests such models' ability to engage in games, that is, rule-constituted activities played using language."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Philipp Sadler", email = "first.last@uni-potsdam.de" },
    { name = "Jonathan Jordan", email = "first.last@uni-potsdam.de" },
    { name = "Sherzod Hakimov", email = "first.last@uni-potsdam.de" },
    { name = "Anne Beyer", email = "first.last@uni-potsdam.de" },
    { name = "L. Pfennigschmidt", email = "first.last@uni-potsdam.de" },
    { name = "Kushal Koshti", email = "first.last@uni-potsdam.de" }
]
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24.3,<2.0.0",
    "retry>=0.9.2",
    "tqdm>=4.65.0",
    "nltk>=3.8.1",
    "aleph-alpha-client==7.0.1",
    "openai==1.12.0",
    "anthropic==0.47.1",
    "cohere==4.48",
    "google-generativeai==0.8.4",
    "mistralai==0.0.12",
    "matplotlib==3.7.1",
    "pandas==2.0.1",
    "seaborn==0.12.2"
]

[project.optional-dependencies]
vllm = [
    "vllm==0.5.4",
    "transformers==4.47.0"
]
huggingface = [
    "torch==2.1.1",
    "transformers==4.47.0",
    "sentencepiece==0.1.99",
    "accelerate==1.2.1",
    "einops==0.6.1",
    "protobuf==4.21.6",
    "bitsandbytes==0.39.0"
]
slurk = [
    "python-engineio==4.4.0",
    "python-socketio==5.7.2",
    "websocket-client"
]

[project.scripts]
clem = "clemcore.cli:main"

[project.urls]
Homepage = "https://github.com/clp-research/clemcore"

[tool.setuptools.package-data]
clemcore = [
    "clemcore/utils/logging.yaml",
    "clemcore/utils/chat-two-tracks.css",
    "clemcore/backends/model_registry.json"
]

[tool.setuptools]
packages = ["clemcore"]
