[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clemcore"
version = "3.5.1"
description = "The cLLM (chat-optimized Large Language Model, 'clem') framework tests such models' ability to engage in games, that is, rule-constituted activities played using language."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Philipp Sadler", email = "first.last@uni-potsdam.de" },
    { name = "Jonathan Jordan", email = "first.last@uni-potsdam.de" },
    { name = "Sherzod Hakimov", email = "first.last@uni-potsdam.de" },
    { name = "Anne Beyer", email = "first.last@uni-potsdam.de" },
    { name = "L. Pfennigschmidt", email = "first.last@uni-potsdam.de" },
    { name = "Kushal Koshti", email = "first.last@uni-potsdam.de" }
]
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24.3,<2.0.0",
    "retry>=0.9.2",
    "tqdm>=4.65.0",
    "nltk>=3.9.2,<4.0.0", # for featstruct.unify (3.9 fixes CVE-2024-39705)
    "openai>=2.15.0,<3.0.0",
    "anthropic>=0.75.0,<1.0.0",
    "cohere>=5.20.1,<6.0.0",
    "google-genai>=1.57.0,<2.0.0",
    "mistralai>=1.10.0,<2.0.0",
    "matplotlib==3.7.1",
    "pandas==2.0.1",
    "seaborn==0.12.2",
    "sparklines>=0.7.0",
    "pylatex>=1.4.0,<2.0.0", # transcripts
    "ordered-set>=4.1.0,<5.0.0", # transcripts
    "markdown>=3.8.0,<4.0.0", # transcripts
    "pettingzoo>=1.25.0,<2.0.0", # to wrap games as pettingzoo or gymnasium environments
    "openenv-core~=0.1.1", # to serve games as openenv server
    "datasets>=4.4.0,<5.0.0" # to load playpen-data for openenv server
]

[project.optional-dependencies]
vllm = [
    "transformers>=5.3.0", # keep in sync with huggingface extra; installs torch
    "vllm>=0.8.4,<1.0.0" # should use transformers as installed above
]
huggingface = [
    "accelerate>=1.0.0,<2.0.0", # required for device_map="auto"
    "bitsandbytes>=0.42.0,<1.0.0", # for loading models with 4-bit and 8-bit quantization
    "peft>=0.17.0,<1.0.0", # for loading LoRA models (adapters)
    "timm>=1.0.19,<1.1.0", # for transformers
    "transformers>=5.3.0", # installs torch
    "torchvision", # version resolved by torch
]
slurk = [
    "python-engineio==4.4.0",
    "python-socketio==5.7.2",
    "websocket-client"
]

[project.scripts]
clem = "clemcore.cli:main"

[project.urls]
Homepage = "https://github.com/clp-research/clemcore"

[tool.setuptools.package-data]
clemcore = ["resources/**/*"]

[tool.setuptools]
packages = ["clemcore"]

[tool.pytest.ini_options]
markers = [
    "api: tests that call external APIs (require keys, cost money)",
    "integration: integration tests with known limitations",
]
addopts = "-m 'not api and not integration'"
